Fix code block broken in mobile screen

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -15,12 +15,12 @@ p {
 }
 
 pre {
-  @apply mt-10 px-4 pt-12 pb-4 rounded bg-gray-50 border shadow relative;
+  @apply mt-10 px-4 pt-12 pb-4 rounded bg-gray-50 border shadow relative overflow-auto;
 }
 
 pre::before {
   content: attr(data-filename);
-  @apply absolute top-0 left-0 w-full h-8 px-4 py-1 bg-gray-100 text-gray-600;
+  @apply absolute top-0 left-0 h-8 px-4 py-1 rounded-br bg-gray-200 text-gray-500;
 }
 
 p code {
